--- a/app/views/4/verification-report/check-answers.html
+++ b/app/views/4/verification-report/check-answers.html
@@ -262,13 +262,13 @@
             <dl class="govuk-summary-list govuk-!-margin-bottom-9">
               <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
-                  Electronic monitoring questions
+                  Electronic monitoring for curfew
                 </dt>
                 <dd class="govuk-summary-list__value">
-                  {{data['electronic-monitoring']}}
+                  {{data['consent-electronic-monitoring-curfew']}}
                 </dd>
                 <dd class="govuk-summary-list__actions">
-                  <a class="govuk-link" href="electronic-monitoring">
+                  <a class="govuk-link" href="electronic-monitoring-for-curfew">
                     Change<span class="govuk-visually-hidden"> electronic
                       monitoring</span>
                   </a>
