Add substance misuse and mental health question

--- a/app/views/4/verification-report/electronic-monitoring-for-curfew.html
+++ b/app/views/4/verification-report/electronic-monitoring-for-curfew.html
@@ -52,6 +52,14 @@
             </p>
             <input class="govuk-input" id="consent-electronic-monitoring-curfew" name="consent-electronic-monitoring-curfew" type="text" value="{{data['consent-electronic-monitoring-curfew']}}">
           </div>
+          <div class="govuk-form-group">
+            <p class="govuk-body govuk-label-wrapper">
+              <label class="govuk-label" for="verify-sustance-misuse-mental-health">
+                Verify health for substance misuse or mental health conditions
+              </label>
+            </p>
+            <input class="govuk-input" id="verify-sustance-misuse-mental-health" name="verify-sustance-misuse-mental-health" type="text" value="{{data['verify-sustance-misuse-mental-health']}}">
+          </div>
           <button class="govuk-button" data-module="govuk-button">
             Save and continue
           </button>
