--- a/app/views/4/verification-report/check-answers.html
+++ b/app/views/4/verification-report/check-answers.html
@@ -274,6 +274,20 @@
                   </a>
                 </dd>
               </div>
+              <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key">
+                  Verify health for substance misuse or mental health conditions
+                </dt>
+                <dd class="govuk-summary-list__value">
+                  {{data['verify-sustance-misuse-mental-health']}}
+                </dd>
+                <dd class="govuk-summary-list__actions">
+                  <a class="govuk-link" href="electronic-monitoring-for-curfew">
+                    Change<span class="govuk-visually-hidden"> electronic
+                      monitoring</span>
+                  </a>
+                </dd>
+              </div>
             </dl>
           {% endif %}
           <button class="govuk-button" data-module="govuk-button">
