Fix side nav after changing page name electronic monitoring for curfew

--- a/app/views/4/verification-report/check-answers.html
+++ b/app/views/4/verification-report/check-answers.html
@@ -21,7 +21,7 @@
               <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="unpaid-work">Unpaid work</a>
             </li>
             <li class="app-subnav__section-item">
-              <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="electronic-monitoring">Electronic monitoring</a>
+              <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="electronic-monitoring-for-curfew">Electronic monitoring</a>
             </li>
             <li class="app-subnav__section-item">
               <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="#">Assessor details</a>
@@ -279,7 +279,7 @@
                   Verify health for substance misuse or mental health conditions
                 </dt>
                 <dd class="govuk-summary-list__value">
-                  {{data['verify-sustance-misuse-mental-health']}}
+                  {{data['verify-substance-misuse-mental-health']}}
                 </dd>
                 <dd class="govuk-summary-list__actions">
                   <a class="govuk-link" href="electronic-monitoring-for-curfew">
