--- a/app/views/4/verification-report/electronic-monitoring-for-curfew.html
+++ b/app/views/4/verification-report/electronic-monitoring-for-curfew.html
@@ -21,7 +21,7 @@
               <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="unpaid-work">Unpaid work</a>
             </li>
             <li class="app-subnav__section-item app-subnav__section-item--current">
-              <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="electronic-monitoring">Electronic monitoring</a>
+              <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="electronic-monitoring-for-curefew">Electronic monitoring</a>
             </li>
             <li class="app-subnav__section-item">
               <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="#">Assessor details</a>
@@ -54,11 +54,11 @@
           </div>
           <div class="govuk-form-group">
             <p class="govuk-body govuk-label-wrapper">
-              <label class="govuk-label" for="verify-sustance-misuse-mental-health">
+              <label class="govuk-label" for="verify-substance-misuse-mental-health">
                 Verify health for substance misuse or mental health conditions
               </label>
             </p>
-            <input class="govuk-input" id="verify-sustance-misuse-mental-health" name="verify-sustance-misuse-mental-health" type="text" value="{{data['verify-sustance-misuse-mental-health']}}">
+            <input class="govuk-input" id="verify-substance-misuse-mental-health" name="verify-substance-misuse-mental-health" type="text" value="{{data['verify-substance-misuse-mental-health']}}">
           </div>
           <button class="govuk-button" data-module="govuk-button">
             Save and continue
