Add in supporting comments

--- a/app/views/4/verification-report/check-answers.html
+++ b/app/views/4/verification-report/check-answers.html
@@ -270,7 +270,7 @@
                 <dd class="govuk-summary-list__actions">
                   <a class="govuk-link" href="electronic-monitoring-for-curfew">
                     Change<span class="govuk-visually-hidden"> electronic
-                      monitoring</span>
+                      monitoring for curfew</span>
                   </a>
                 </dd>
               </div>
@@ -283,8 +283,22 @@
                 </dd>
                 <dd class="govuk-summary-list__actions">
                   <a class="govuk-link" href="electronic-monitoring-for-curfew">
-                    Change<span class="govuk-visually-hidden"> electronic
-                      monitoring</span>
+                    Change<span class="govuk-visually-hidden"> Verify health for
+                      substance misuse or mental health conditions</span>
+                  </a>
+                </dd>
+              </div>
+              <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key">
+                  Electronic monitoring for curfew supporting comments
+                </dt>
+                <dd class="govuk-summary-list__value">
+                  {{data['electronic-monitoring-curfew-supporting-comments']}}
+                </dd>
+                <dd class="govuk-summary-list__actions">
+                  <a class="govuk-link" href="electronic-monitoring-for-curfew">
+                    Change<span class="govuk-visually-hidden"> Electronic
+                      monitoring for curfew supporting comments</span>
                   </a>
                 </dd>
               </div>
