--- a/app/views/4/verification-report/electronic-monitoring-for-curfew.html
+++ b/app/views/4/verification-report/electronic-monitoring-for-curfew.html
@@ -60,6 +60,12 @@
             </p>
             <input class="govuk-input" id="verify-substance-misuse-mental-health" name="verify-substance-misuse-mental-health" type="text" value="{{data['verify-substance-misuse-mental-health']}}">
           </div>
+          <div class="govuk-form-group">
+            <h2 class="govuk-heading-l" for="electronic-monitoring-curfew-supporting-comments">
+              Electronic monitoring for curfew supporting comments
+            </h2>
+            <input class="govuk-input" id="electronic-monitoring-curfew-supporting-comments" name="electronic-monitoring-curfew-supporting-comments" type="electronic-monitoring-curfew-supporting-comments" value="{{data['electronic-monitoring-curfew-supporting-comments']}}">
+          </div>
           <button class="govuk-button" data-module="govuk-button">
             Save and continue
           </button>
