--- a/app/views/4/verification-report/electronic-monitoring-for-curfew.html
+++ b/app/views/4/verification-report/electronic-monitoring-for-curfew.html
@@ -45,19 +45,15 @@
             Electronic monitoring for curfew questions
           </h1>
           <div class="govuk-form-group">
-            <p class="govuk-body govuk-label-wrapper">
-              <label class="govuk-label" for="consent-electronic-monitoring-curfew">
-                Verify consent for electronic monitoring curfew
-              </label>
-            </p>
+            <h2 class="govuk-heading-l" for="consent-electronic-monitoring-curfew">
+              Verify consent for electronic monitoring curfew
+            </h2>
             <input class="govuk-input" id="consent-electronic-monitoring-curfew" name="consent-electronic-monitoring-curfew" type="text" value="{{data['consent-electronic-monitoring-curfew']}}">
           </div>
           <div class="govuk-form-group">
-            <p class="govuk-body govuk-label-wrapper">
-              <label class="govuk-label" for="verify-substance-misuse-mental-health">
-                Verify health for substance misuse or mental health conditions
-              </label>
-            </p>
+            <h2 class="govuk-heading-l" for="verify-substance-misuse-mental-health">
+              Verify health for substance misuse or mental health conditions
+            </h2>
             <input class="govuk-input" id="verify-substance-misuse-mental-health" name="verify-substance-misuse-mental-health" type="text" value="{{data['verify-substance-misuse-mental-health']}}">
           </div>
           <div class="govuk-form-group">
