--- a/app/views/4/verification-report/offender-details.html
+++ b/app/views/4/verification-report/offender-details.html
@@ -9,25 +9,29 @@
         <h2 class="govuk-visually-hidden" id="app-subnav-heading">Report sections</h2>
           <ul class="app-subnav__section">
             <li class="app-subnav__section-item app-subnav__section-item--current">
-              <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="offender-details">Offender details</a>
+              <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="offender-details">Defendant details</a>
+            </li>
+            <li class="app-subnav__section-item app-subnav__section-item--current">
+              <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="offence-information">Offence information</a>
+            </li>
+            <li class="app-subnav__section-item">
+              <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="required-sections">Tailor your report</a>
             </li>
             <li class="app-subnav__section-item">
               <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="common-data">Common data</a>
             </li>
+            
             <li class="app-subnav__section-item">
-              <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="required-sections">Required sections</a>
+              <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="unpaid-work">Suitability for unpaid work</a>
             </li>
             <li class="app-subnav__section-item">
-              <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="unpaid-work">Unpaid work</a>
-            </li>
-            <li class="app-subnav__section-item">
-              <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="electronic-monitoring-for-curfew">Electronic monitoring</a>
+              <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="electronic-monitoring-for-curfew">Suitability for electronic monitoring</a>
             </li>
             <li class="app-subnav__section-item">
               <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="#">Assessor details</a>
             </li>
             <li class="app-subnav__section-item">
-              <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="check-answers">Check answers</a>
+              <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="check-answers">Check your answers</a>
             </li>
             <li class="app-subnav__section-item">
               <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="#">Publish report</a>
@@ -39,10 +43,10 @@
       <main id="main-content" class="app-content" role="main">
         <form action="offender-details" method="post" novalidate>
           <span class="govuk-caption-xl">
-            Jo Wade X1234567
+            Signed in user's name and number here?
           </span>
           <h1 class="govuk-heading-xl">
-            Offender Details
+            Defendant details
           </h1>
           <div class="govuk-form-group">
             <h2 class="govuk-heading-l" for="full-name">
@@ -51,11 +55,20 @@
             <input class="govuk-input" id="full-name" name="full-name" type="full-name" value="{{data['full-name']}}">
           </div>
           <div class="govuk-form-group">
+            <h2 class="govuk-heading-l" for="full-name">
+              CRN
+            </h2>
+            <input class="govuk-input" id="test" name="case-reference-number" type="case-reference-number" value="{{data['case-reference-number']}}">
+          </div>
+          <div class="govuk-form-group">
             <fieldset class="govuk-fieldset">
               <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                 <h2 class="govuk-fieldset__heading">
                   Current address
                 </h2>
+                <div id="address-hint" class="govuk-hint">
+                  This must be the address that the defendant will be staying at throughout their order.
+                </div>
               </legend>
               <div class="govuk-form-group">
                 <label class="govuk-label" for="address-line-1">
@@ -88,6 +101,12 @@
                 <input class="govuk-input govuk-input--width-10" id="address-postcode" name="address-postcode" type="text" value="{{data['address-postcode']}}">
               </div>
             </fieldset>
+          </div>
+          <div class="govuk-form-group">
+            <h2 class="govuk-heading-l" for="full-name">
+             How have you verified that the defendant is living at this address?
+            </h2>
+            <input class="govuk-input" id="address-verification" name="address-verification" type="address-verification" value="{{data['full-name']}}">
           </div>
           <div class="govuk-form-group">
             <fieldset class="govuk-fieldset" role="group" aria-describedby="date-of-birth-hint">
@@ -127,23 +146,8 @@
               </div>
             </fieldset>
           </div>
-          <div class="govuk-form-group">
-            <h2 class="govuk-heading-l" for="full-name">
-              CRN
-            </h2>
-            <input class="govuk-input" id="test" name="case-reference-number" type="case-reference-number" value="{{data['case-reference-number']}}">
-          </div>
-          <div class="govuk-form-group">
-            <h1 class="govuk-label-wrapper">
-              <label class="govuk-label govuk-label--l" for="offences">
-                Offences
-              </label>
-            </h1>
-            <div id="offences-hint" class="govuk-hint">
-              Do we need hint text?
-            </div>
-            <textarea class="govuk-textarea" id="offences" name="offences" rows="5" aria-describedby="offences-hint">{{data['offences']}}</textarea>
-          </div>
+      
+          
           <button class="govuk-button" data-module="govuk-button">
             Save and continue
           </button>
