--- a/app/views/4/verification-report/electronic-monitoring-for-curfew.html
+++ b/app/views/4/verification-report/electronic-monitoring-for-curfew.html
@@ -3,38 +3,42 @@
 {% set pageName="Electronic monitoring for curfew" %}
 
 {% block content %}
-  <div class="app-split-pane app-width-container">
-    <div class="app-split-pane__nav">
-      <nav class="app-subnav" aria-labelledby="app-subnav-heading">
-        <h2 class="govuk-visually-hidden" id="app-subnav-heading">Report sections</h2>
-          <ul class="app-subnav__section">
-            <li class="app-subnav__section-item">
-              <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="offender-details">Offender details</a>
-            </li>
-            <li class="app-subnav__section-item">
-              <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="common-data">Common data</a>
-            </li>
-            <li class="app-subnav__section-item">
-              <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="required-sections">Required sections</a>
-            </li>
-            <li class="app-subnav__section-item">
-              <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="unpaid-work">Unpaid work</a>
-            </li>
-            <li class="app-subnav__section-item app-subnav__section-item--current">
-              <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="electronic-monitoring-for-curefew">Electronic monitoring</a>
-            </li>
-            <li class="app-subnav__section-item">
-              <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="#">Assessor details</a>
-            </li>
-            <li class="app-subnav__section-item">
-              <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="check-answers">Check answers</a>
-            </li>
-            <li class="app-subnav__section-item">
-              <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="#">Publish report</a>
-            </li>
-          </ul>
-      </nav>
-    </div>
+<div class="app-split-pane app-width-container">
+  <div class="app-split-pane__nav">
+    <nav class="app-subnav" aria-labelledby="app-subnav-heading">
+      <h2 class="govuk-visually-hidden" id="app-subnav-heading">Report sections</h2>
+        <ul class="app-subnav__section">
+          <li class="app-subnav__section-item app-subnav__section-item--current">
+            <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="offender-details">Defendant details</a>
+          </li>
+          <li class="app-subnav__section-item app-subnav__section-item--current">
+            <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="offence-information">Offence information</a>
+          </li>
+          <li class="app-subnav__section-item">
+            <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="required-sections">Tailor your report</a>
+          </li>
+          <li class="app-subnav__section-item">
+            <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="common-data">Common data</a>
+          </li>
+          
+          <li class="app-subnav__section-item">
+            <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="unpaid-work">Suitability for unpaid work</a>
+          </li>
+          <li class="app-subnav__section-item">
+            <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="electronic-monitoring-for-curfew">Suitability for electronic monitoring</a>
+          </li>
+          <li class="app-subnav__section-item">
+            <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="#">Assessor details</a>
+          </li>
+          <li class="app-subnav__section-item">
+            <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="check-answers">Check your answers</a>
+          </li>
+          <li class="app-subnav__section-item">
+            <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="#">Publish report</a>
+          </li>
+        </ul>
+    </nav>
+  </div>
     <div class="app-split-pane__content">
       <main id="main-content" class="app-content" role="main">
         <form action="electronic-monitoring-for-curfew" method="post" novalidate>
@@ -42,26 +46,74 @@
             Jo Wade X1234567
           </span>
           <h1 class="govuk-heading-xl">
-            Electronic monitoring for curfew questions
+            Suitability for electronic monitoring
           </h1>
           <div class="govuk-form-group">
             <h2 class="govuk-heading-l" for="consent-electronic-monitoring-curfew">
-              Verify consent for electronic monitoring curfew
+              Has the defendant given their informed consent to an electronic monitoring curfew?
             </h2>
-            <input class="govuk-input" id="consent-electronic-monitoring-curfew" name="consent-electronic-monitoring-curfew" type="text" value="{{data['consent-electronic-monitoring-curfew']}}">
+            <div id="health-conditions-hint" class="govuk-hint">
+              It is a legal requirement that the defendant gives their informed consent to submit to electronic monitoring. 
+            </div>
+            <div class="govuk-form-group">
+              <fieldset class="govuk-fieldset">
+                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+                </legend>
+                <div class="govuk-radios" data-module="govuk-radios">
+                  <div class="govuk-radios__item">
+                    <input class="govuk-radios__input" id="where-do-you-live" name="where-do-you-live" type="radio" value="england">
+                    <label class="govuk-label govuk-radios__label" for="where-do-you-live">
+                      Yes, they have given informed consent
+                    </label>
+                  </div>
+                  <div class="govuk-radios__item">
+                    <input class="govuk-radios__input" id="where-do-you-live-2" name="where-do-you-live" type="radio" value="scotland">
+                    <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
+                      No, they have not given informed consent
+                    </label>
+                  </div>
+                  
+                  
+                </div>
+              </fieldset>
+            </div>
+            <div class="govuk-form-group">
+              <h3 class="govuk-heading-m" for="health-verification">
+               How have you verified this information?
+              </h3>
+              <input class="govuk-input" id="health-verification" name="health-verification" type="health-verification" value="{{data['full-name']}}">
+            </div>
           </div>
+          
           <div class="govuk-form-group">
             <h2 class="govuk-heading-l" for="verify-substance-misuse-mental-health">
-              Verify health for substance misuse or mental health conditions
+              Health
             </h2>
-            <input class="govuk-input" id="verify-substance-misuse-mental-health" name="verify-substance-misuse-mental-health" type="text" value="{{data['verify-substance-misuse-mental-health']}}">
+            <div id="health-conditions-hint" class="govuk-hint">
+            Record any health conditions that may effect their suitability to receive an electronic monitoring curfew.
+          </div>
+          <input class="govuk-input" id="verify-substance-misuse-mental-health" name="verify-substance-misuse-mental-health" type="text" value="{{data['verify-substance-misuse-mental-health']}}">
           </div>
           <div class="govuk-form-group">
-            <h2 class="govuk-heading-l" for="electronic-monitoring-curfew-supporting-comments">
-              Electronic monitoring for curfew supporting comments
-            </h2>
-            <input class="govuk-input" id="electronic-monitoring-curfew-supporting-comments" name="electronic-monitoring-curfew-supporting-comments" type="electronic-monitoring-curfew-supporting-comments" value="{{data['electronic-monitoring-curfew-supporting-comments']}}">
+            <h3 class="govuk-heading-m" for="health-verification">
+             How have you verified this information?
+            </h3>
+            <input class="govuk-input" id="health-verification" name="health-verification" type="health-verification" value="{{data['full-name']}}">
           </div>
+          
+          
+          <div class="govuk-form-group">
+            <h1 class="govuk-label-wrapper">
+              <label class="govuk-label govuk-label--l" for="more-detail">
+                Supporting comments
+              </label>
+            </h1>
+            <div id="more-detail-hint" class="govuk-hint">
+              Include any information here that supports your professional judgement. This will not be shared in the final report.
+            </div>
+            <textarea class="govuk-textarea" id="more-detail" name="more-detail" rows="5" aria-describedby="more-detail-hint"></textarea>
+          </div>
+          
           <button class="govuk-button" data-module="govuk-button">
             Save and continue
           </button>
