--- a/app/views/4/verification-report/unpaid-work.html
+++ b/app/views/4/verification-report/unpaid-work.html
@@ -3,38 +3,42 @@
 {% set pageName="Unpaid work questions" %}
 
 {% block content %}
-  <div class="app-split-pane app-width-container">
-    <div class="app-split-pane__nav">
-      <nav class="app-subnav" aria-labelledby="app-subnav-heading">
-        <h2 class="govuk-visually-hidden" id="app-subnav-heading">Report sections</h2>
-          <ul class="app-subnav__section">
-            <li class="app-subnav__section-item">
-              <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="offender-details">Offender details</a>
-            </li>
-            <li class="app-subnav__section-item">
-              <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="common-data">Common data</a>
-            </li>
-            <li class="app-subnav__section-item">
-              <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="required-sections">Required sections</a>
-            </li>
-            <li class="app-subnav__section-item app-subnav__section-item--current">
-              <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="unpaid-work">Unpaid work</a>
-            </li>
-            <li class="app-subnav__section-item">
-              <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="electronic-monitoring-for-curfew">Electronic monitoring</a>
-            </li>
-            <li class="app-subnav__section-item">
-              <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="#">Assessor details</a>
-            </li>
-            <li class="app-subnav__section-item">
-              <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="check-answers">Check answers</a>
-            </li>
-            <li class="app-subnav__section-item">
-              <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="#">Publish report</a>
-            </li>
-          </ul>
-      </nav>
-    </div>
+<div class="app-split-pane app-width-container">
+  <div class="app-split-pane__nav">
+    <nav class="app-subnav" aria-labelledby="app-subnav-heading">
+      <h2 class="govuk-visually-hidden" id="app-subnav-heading">Report sections</h2>
+        <ul class="app-subnav__section">
+          <li class="app-subnav__section-item app-subnav__section-item--current">
+            <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="offender-details">Defendant details</a>
+          </li>
+          <li class="app-subnav__section-item app-subnav__section-item--current">
+            <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="offence-information">Offence information</a>
+          </li>
+          <li class="app-subnav__section-item">
+            <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="required-sections">Tailor your report</a>
+          </li>
+          <li class="app-subnav__section-item">
+            <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="common-data">Common data</a>
+          </li>
+          
+          <li class="app-subnav__section-item">
+            <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="unpaid-work">Suitability for unpaid work</a>
+          </li>
+          <li class="app-subnav__section-item">
+            <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="electronic-monitoring-for-curfew">Suitability for electronic monitoring</a>
+          </li>
+          <li class="app-subnav__section-item">
+            <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="#">Assessor details</a>
+          </li>
+          <li class="app-subnav__section-item">
+            <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="check-answers">Check your answers</a>
+          </li>
+          <li class="app-subnav__section-item">
+            <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="#">Publish report</a>
+          </li>
+        </ul>
+    </nav>
+  </div>
     <div class="app-split-pane__content">
       <main id="main-content" class="app-content" role="main">
         <form action="unpaid-work" method="post" novalidate>
@@ -42,25 +46,48 @@
             Jo Wade X1234567
           </span>
           <h1 class="govuk-heading-xl">
-            Unpaid work questions
+            Suitability for unpaid work
           </h1>
           <div class="govuk-form-group">
             <h2 class="govuk-heading-l" for="verify-no-health-conditions">
-              Verify no health conditions
+              Health conditions
             </h2>
+            <div id="health-conditions-hint" class="govuk-hint">
+              Record any health conditions that may effect their ability to complete unpaid work.
+            </div>
             <input class="govuk-input" id="verify-no-health-conditions" name="verify-no-health-conditions" type="verify-no-health-conditions" value="{{data['verify-no-health-conditions']}}">
           </div>
           <div class="govuk-form-group">
+            <h3 class="govuk-heading-m" for="health-verification">
+             How have you verified this information?
+            </h3>
+            <input class="govuk-input" id="health-verification" name="health-verification" type="health-verification" value="{{data['full-name']}}">
+          </div>
+          <div class="govuk-form-group">
             <h2 class="govuk-heading-l" for="verify-dwp-involvement">
-              Verify DWP involvement
+              Department for work and pensions
             </h2>
+            <div id="DWP-hint" class="govuk-hint">
+              Record any benefits that the defendant gets that may impact on their eligibility or fitness for unpaid work. 
+            </div>
             <input class="govuk-input" id="verify-dwp-involvement" name="verify-dwp-involvement" type="verify-dwp-involvement" value="{{data['verify-dwp-involvement']}}">
           </div>
           <div class="govuk-form-group">
-            <h2 class="govuk-heading-l" for="unpaid-work-supporting-comments">
-              Unpaid work supporting comments
-            </h2>
-            <input class="govuk-input" id="unpaid-work-supporting-comments" name="unpaid-work-supporting-comments" type="unpaid-work-supporting-comments" value="{{data['unpaid-work-supporting-comments']}}">
+            <h3 class="govuk-heading-m" for="health-verification">
+             How have you verified this information?
+            </h3>
+            <input class="govuk-input" id="health-verification" name="health-verification" type="health-verification" value="{{data['full-name']}}">
+          </div>
+          <div class="govuk-form-group">
+            <h1 class="govuk-label-wrapper">
+              <label class="govuk-label govuk-label--l" for="more-detail">
+                Supporting comments
+              </label>
+            </h1>
+            <div id="more-detail-hint" class="govuk-hint">
+              Include any information here that supports your professional judgement. This will not be shared in the final report.
+            </div>
+            <textarea class="govuk-textarea" id="more-detail" name="more-detail" rows="5" aria-describedby="more-detail-hint"></textarea>
           </div>
           <button class="govuk-button" data-module="govuk-button">
             Save and continue
