Added a new page for the proposal Updated DWP to sentence case Added a dummy user name and CRN

--- a/app/views/4/verification-report/common-data.html
+++ b/app/views/4/verification-report/common-data.html
@@ -12,7 +12,7 @@
             <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="offender-details">Defendant details</a>
           </li>
           <li class="app-subnav__section-item app-subnav__section-item--current">
-            <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="offence-information">Offence information</a>
+            <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="offence-information">Offences</a>
           </li>
           <li class="app-subnav__section-item">
             <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="required-sections">Tailor your report</a>
@@ -26,6 +26,9 @@
           </li>
           <li class="app-subnav__section-item">
             <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="electronic-monitoring-for-curfew">Suitability for electronic monitoring</a>
+          </li>
+          <li class="app-subnav__section-item">
+            <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="proposal">Proposal</a>
           </li>
           <li class="app-subnav__section-item">
             <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="#">Assessor details</a>
@@ -43,7 +46,7 @@
       <main id="main-content" class="app-content" role="main">
         <form action="common-data" method="post" novalidate>
           <span class="govuk-caption-xl">
-            Jo Wade X1234567
+            Dylan Adam Armstrong CRN: E234516
           </span>
           <h1 class="govuk-heading-xl">
             Required information for any type of report
