--- a/app/views/4/verification-report/required-sections.html
+++ b/app/views/4/verification-report/required-sections.html
@@ -12,7 +12,7 @@
             <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="offender-details">Defendant details</a>
           </li>
           <li class="app-subnav__section-item app-subnav__section-item--current">
-            <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="offence-information">Offence information</a>
+            <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="offence-information">Offences</a>
           </li>
           <li class="app-subnav__section-item">
             <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="required-sections">Tailor your report</a>
@@ -28,6 +28,9 @@
             <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="electronic-monitoring-for-curfew">Suitability for electronic monitoring</a>
           </li>
           <li class="app-subnav__section-item">
+            <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="proposal">Proposal</a>
+          </li>
+          <li class="app-subnav__section-item">
             <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="#">Assessor details</a>
           </li>
           <li class="app-subnav__section-item">
@@ -39,6 +42,7 @@
         </ul>
     </nav>
   </div>
+  
     <div class="app-split-pane__content">
       <main id="main-content" class="app-content" role="main">
         <form action="required-sections" method="post" novalidate>
@@ -46,7 +50,7 @@
             <fieldset class="govuk-fieldset">
               <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                 <span class="govuk-caption-xl">
-                  Jo Wade X1234567
+                  Dylan Adam Armstrong CRN: E234516
                 </span>
                 <h1 class="govuk-fieldset__heading">
                   Tailor your report
