Add entry on index for the work Rebecca Cryan did
A lot of content changes to articulate how we may ask for information
based on the miro board of data items we ran though with the central
court team.

https://miro.com/app/board/uXjVM6w-eIM=/?moveToWidget=3458764562087645245&cot=14

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -13,6 +13,11 @@
       <p><a class="govuk-link" href="/4/verification-report/start.html">Prototype</a></p>
       <ul class="govuk-list govuk-list--bullet">
         <li>
+          <p class="govuk-body">
+            Initial work to articulate how we can ask for the required data
+            items</p>
+        </li>
+        <li>
           <p class="govuk-body"><a class="govuk-link" href="https://dsdmoj.atlassian.net/browse/PIC-3275">
             Block out sections of verification report.</a></p>
         </li>
