Offender details becomes defendant details
They are not guilty so they should really be defendants. Offender makes
it sound like they are guilty.

--- a/app/views/5/verification-report/unpaid-work.html
+++ b/app/views/5/verification-report/unpaid-work.html
@@ -9,7 +9,7 @@
       <h2 class="govuk-visually-hidden" id="app-subnav-heading">Report sections</h2>
         <ul class="app-subnav__section">
           <li class="app-subnav__section-item app-subnav__section-item--current">
-            <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="offender-details">Defendant details</a>
+            <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="defendant-details">Defendant details</a>
           </li>
           <li class="app-subnav__section-item app-subnav__section-item--current">
             <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="offence-information">Offences</a>
@@ -20,7 +20,7 @@
           <li class="app-subnav__section-item">
             <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="common-data">Common data</a>
           </li>
-          
+
           <li class="app-subnav__section-item">
             <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="unpaid-work">Suitability for unpaid work</a>
           </li>
@@ -71,7 +71,7 @@
               Department for Work and Pensions
             </h2>
             <div id="DWP-hint" class="govuk-hint">
-              Record any benefits that the defendant gets that may impact on their eligibility or fitness for unpaid work. 
+              Record any benefits that the defendant gets that may impact on their eligibility or fitness for unpaid work.
             </div>
             <input class="govuk-input" id="verify-dwp-involvement" name="verify-dwp-involvement" type="verify-dwp-involvement" value="{{data['verify-dwp-involvement']}}">
           </div>
