--- a/app/views/5/verification-report/common-data.html
+++ b/app/views/5/verification-report/common-data.html
@@ -9,7 +9,7 @@
       <h2 class="govuk-visually-hidden" id="app-subnav-heading">Report sections</h2>
         <ul class="app-subnav__section">
           <li class="app-subnav__section-item app-subnav__section-item--current">
-            <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="offender-details">Defendant details</a>
+            <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="defendant-details">Defendant details</a>
           </li>
           <li class="app-subnav__section-item app-subnav__section-item--current">
             <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="offence-information">Offences</a>
@@ -20,7 +20,7 @@
           <li class="app-subnav__section-item">
             <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="common-data">Common data</a>
           </li>
-          
+
           <li class="app-subnav__section-item">
             <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="unpaid-work">Suitability for unpaid work</a>
           </li>
@@ -56,7 +56,7 @@
               Domestic abuse checks
             </h2>
             <div id="health-conditions-hint" class="govuk-hint">
-              You must check for any previous domestic violence charges or domestic abuse Police call-outs. 
+              You must check for any previous domestic violence charges or domestic abuse Police call-outs.
             </div>
             <input class="govuk-input" id="test" name="domestic-abuse-checks" type="domestic-abuse-checks" value="{{data['domestic-abuse-checks']}}">
           </div>
@@ -65,7 +65,7 @@
               Safeguarding checks
             </h2>
             <div id="health-conditions-hint" class="govuk-hint">
-              You must check for [something I don't know about yet]. 
+              You must check for [something I don't know about yet].
             </div>
             <input class="govuk-input" id="test" name="safeguarding-checks" type="safeguarding-checks" value="{{data['safeguarding-checks']}}">
           </div>
@@ -119,7 +119,7 @@
               Dependants
             </h2>
             <div id="health-conditions-hint" class="govuk-hint">
-              Record and dependants and caring responsibilities that could impact someone's ability to do unpaid work or receive an electronic monitoring curfew. 
+              Record and dependants and caring responsibilities that could impact someone's ability to do unpaid work or receive an electronic monitoring curfew.
             </div>
             <input class="govuk-input" id="dependant-caring-responsibilities" name="dependant-caring-responsibilities" type="dependant-caring-responsibilities" value="{{data['dependant-caring-responsibilities']}}">
           </div>
@@ -134,7 +134,7 @@
               Employment
             </h2>
             <div id="health-conditions-hint" class="govuk-hint">
-              Record their employment status and working pattern. 
+              Record their employment status and working pattern.
             </div>
             <input class="govuk-input" id="verify-current-employment" name="verify-current-employment" type="verify-current-employment" value="{{data['verify-current-employment']}}">
           </div>
