--- a/app/views/5/verification-report/electronic-monitoring-for-curfew.html
+++ b/app/views/5/verification-report/electronic-monitoring-for-curfew.html
@@ -9,7 +9,7 @@
       <h2 class="govuk-visually-hidden" id="app-subnav-heading">Report sections</h2>
         <ul class="app-subnav__section">
           <li class="app-subnav__section-item app-subnav__section-item--current">
-            <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="offender-details">Defendant details</a>
+            <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="defendant-details">Defendant details</a>
           </li>
           <li class="app-subnav__section-item app-subnav__section-item--current">
             <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="offence-information">Offences</a>
@@ -20,7 +20,7 @@
           <li class="app-subnav__section-item">
             <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="common-data">Common data</a>
           </li>
-          
+
           <li class="app-subnav__section-item">
             <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="unpaid-work">Suitability for unpaid work</a>
           </li>
@@ -56,7 +56,7 @@
               Informed consent to an electronic monitoring curfew
             </h2>
             <div id="health-conditions-hint" class="govuk-hint">
-              It is a legal requirement that the defendant gives their informed consent to submit to electronic monitoring. 
+              It is a legal requirement that the defendant gives their informed consent to submit to electronic monitoring.
             </div>
             <div class="govuk-form-group">
               <fieldset class="govuk-fieldset">
@@ -75,8 +75,8 @@
                       No, they have not given informed consent
                     </label>
                   </div>
-                  
-                  
+
+
                 </div>
               </fieldset>
             </div>
@@ -87,7 +87,7 @@
               <input class="govuk-input" id="health-verification" name="health-verification" type="health-verification" value="{{data['full-name']}}">
             </div>
           </div>
-          
+
           <div class="govuk-form-group">
             <h2 class="govuk-heading-l" for="verify-substance-misuse-mental-health">
               Health
@@ -103,8 +103,8 @@
             </h3>
             <input class="govuk-input" id="health-verification" name="health-verification" type="health-verification" value="{{data['full-name']}}">
           </div>
-          
-          
+
+
           <div class="govuk-form-group">
             <h1 class="govuk-label-wrapper">
               <label class="govuk-label govuk-label--l" for="more-detail">
@@ -116,7 +116,7 @@
             </div>
             <textarea class="govuk-textarea" id="more-detail" name="more-detail" rows="5" aria-describedby="more-detail-hint"></textarea>
           </div>
-          
+
           <button class="govuk-button" data-module="govuk-button">
             Save and continue
           </button>
