--- a/app/views/5/verification-report/offence-information.html
+++ b/app/views/5/verification-report/offence-information.html
@@ -9,7 +9,7 @@
       <h2 class="govuk-visually-hidden" id="app-subnav-heading">Report sections</h2>
         <ul class="app-subnav__section">
           <li class="app-subnav__section-item app-subnav__section-item--current">
-            <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="offender-details">Defendant details</a>
+            <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="defendant-details">Defendant details</a>
           </li>
           <li class="app-subnav__section-item app-subnav__section-item--current">
             <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="offence-information">Offences</a>
@@ -20,7 +20,7 @@
           <li class="app-subnav__section-item">
             <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="common-data">Common data</a>
           </li>
-          
+
           <li class="app-subnav__section-item">
             <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="unpaid-work">Suitability for unpaid work</a>
           </li>
@@ -51,14 +51,14 @@
           <h1 class="govuk-heading-xl">
             Offences
           </h1>
-          
+
           <div class="govuk-form-group">
             <h1 class="govuk-label-wrapper">
               <label class="govuk-label govuk-label--l" for="offences">
                 List all offences this report relates to
               </label>
             </h1>
-            
+
             <textarea class="govuk-textarea" id="offences" name="offences" rows="5" aria-describedby="offences-hint">{{data['offences']}}</textarea>
           </div>
           <button class="govuk-button" data-module="govuk-button">
