--- a/app/views/5/verification-report/required-sections.html
+++ b/app/views/5/verification-report/required-sections.html
@@ -9,7 +9,7 @@
       <h2 class="govuk-visually-hidden" id="app-subnav-heading">Report sections</h2>
         <ul class="app-subnav__section">
           <li class="app-subnav__section-item app-subnav__section-item--current">
-            <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="offender-details">Defendant details</a>
+            <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="defendant-details">Defendant details</a>
           </li>
           <li class="app-subnav__section-item app-subnav__section-item--current">
             <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="offence-information">Offences</a>
@@ -20,7 +20,7 @@
           <li class="app-subnav__section-item">
             <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="common-data">Common data</a>
           </li>
-          
+
           <li class="app-subnav__section-item">
             <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="unpaid-work">Suitability for unpaid work</a>
           </li>
@@ -42,7 +42,7 @@
         </ul>
     </nav>
   </div>
-  
+
     <div class="app-split-pane__content">
       <main id="main-content" class="app-content" role="main">
         <form action="required-sections" method="post" novalidate>
