Fix verify address, add to check answers
- capture the how verified address to a descriptive variable
- output how verified address on check answers

--- a/app/views/5/verification-report/defendant-details.html
+++ b/app/views/5/verification-report/defendant-details.html
@@ -109,7 +109,7 @@
             <h2 class="govuk-heading-l" for="full-name">
              How have you verified that the defendant is living at this address?
             </h2>
-            <input class="govuk-input" id="address-verification" name="address-verification" type="address-verification" value="{{data['full-name']}}">
+            <input class="govuk-input" id="address-verification" name="address-verification" type="address-verification" value="{{data['address-verification']}}">
           </div>
           <div class="govuk-form-group">
             <fieldset class="govuk-fieldset" role="group" aria-describedby="date-of-birth-hint">
