--- a/app/views/5/verification-report/check-answers.html
+++ b/app/views/5/verification-report/check-answers.html
@@ -89,6 +89,19 @@
             </div>
             <div class="govuk-summary-list__row">
               <dt class="govuk-summary-list__key">
+                Address verification
+              </dt>
+              <dd class="govuk-summary-list__value">
+                {{data['address-verification']}}
+              </dd>
+              <dd class="govuk-summary-list__actions">
+                <a class="govuk-link" href="offender-details">
+                  Change<span class="govuk-visually-hidden"> address verification</span>
+                </a>
+              </dd>
+            </div>
+            <div class="govuk-summary-list__row">
+              <dt class="govuk-summary-list__key">
                 Date of birth
               </dt>
               <dd class="govuk-summary-list__value">
